# external_portaudio

./: .gitmodules  CMakeLists.txt  Makefile-linux_amd64_clang  Makefile-linux_armcortexa7_gcc  README.md
resources/: Makefile-linux_amd64_clang  Makefile-linux_amd64_gcc  Makefile-linux_armcortexa7_gcc  macros.cmake
test/: CMakeLists.txt  portaudio_test.cpp
